added: frontend mvp

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
-
+spring.application.name=IPZBase
+server.port=8080
+server.address=localhost
+spring.datasource.url=jdbc:mariadb://localhost:3306/ipzdatabase
+spring.datasource.username=root
+spring.datasource.password=password
+# Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
+# schema will be automatically created afresh for every start of application
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+# Allows Hibernate to generate SQL optimized for a particular DBMS
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.format_sql=true
+server.error.include-message=always
+#this is comment
