--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=IPZBase
 server.port=8080
 server.address=localhost
 spring.datasource.url=jdbc:mariadb://localhost:3306/ipzdatabase
-spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.username=jsavely
+spring.datasource.password=pass
 # Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
 # schema will be automatically created afresh for every start of application
 spring.jpa.hibernate.ddl-auto=create-drop
